tests/snapshots/dbc-cantools/no_signals.snap
---
source: tests/snapshots.rs
---
version: "HIPBNYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY/4/%%%/4/'%**4YYY///"
bit_timing: []
nodes:
  - Node
  - TestNode
messages:
  - id:
      Standard: 1024
    name: Message1
    size: 5
    transmitter: TestNode
  - id:
      Standard: 1025
    name: Message2
    size: 0
    transmitter: TestNode
